<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_up"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/selection_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/small_text_size"
        android:text="@string/select_contact"/>
    <Button
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/background_color"
        android:text="@string/call_owner"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />
    <Button
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/background_color"
        android:text="@string/email_owner"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

</LinearLayout>