<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout"
    android:fillViewport="true"
    tools:context=".RentDescription">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_title">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow android:layout_marginTop="@dimen/margin_top_title">

                    <TextView
                        android:id="@+id/rentType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/type"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/rentDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/rentLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/rentPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/cost"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/rentSize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/size"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/rentTags"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/tags"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_top">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/image_height"
                        android:id="@+id/rentImage"
                        android:layout_span="6"
                        android:layout_marginLeft="@dimen/padding_left"
                        android:layout_marginRight="@dimen/padding_left"/>
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/contactButton"
                android:layout_width="@dimen/width_buttons"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/table"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/background_color"
                android:onClick="contactOwner"
                android:text="@string/contact_button"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BookmarkButton"
                android:layout_width="@dimen/width_buttons"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/contactButton"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_color"
                android:layout_marginTop="@dimen/margin_top"
                android:onClick="bookmarkRent"
                android:text="@string/bookmark_button"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/flagButton"
                android:layout_width="@dimen/width_buttons"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/BookmarkButton"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_color"
                android:layout_marginTop="@dimen/margin_top"
                android:onClick="flagInadequate"
                android:text="@string/flag_button"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/returnButton"
                android:layout_width="@dimen/width_buttons"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/flagButton"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_color"
                android:layout_marginTop="@dimen/margin_top"
                android:onClick="goBack"
                android:text="@string/goBack_button"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
