<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout"
    android:fillViewport="true"
    tools:context=".ViewRent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_title">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow android:layout_marginTop="@dimen/margin_top_title">

                    <TextView
                        android:id="@+id/rentType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/type"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <Spinner
                        android:id="@+id/spinnerType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@color/background_text"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/rentDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                </TableRow>

                <TableRow>
                    <EditText
                        android:id="@+id/textDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@color/background_text"
                        android:layout_marginLeft="@dimen/padding_left"
                        android:inputType="text"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/rentLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/textLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@color/background_text"
                        android:inputType="textPostalAddress"
                        android:textSize="@dimen/text_size"
                        android:hint="@string/location_hint"/>
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/rentPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/cost"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/textCost"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@color/background_text"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/rentSize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/size"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/textSize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@color/background_text"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/rentTags"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/tags"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                </TableRow>

                <TableRow>
                    <EditText
                        android:id="@+id/textTags"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@color/background_text"
                        android:layout_marginLeft="@dimen/padding_left"
                        android:inputType="text"
                        android:textSize="@dimen/text_size"
                        android:hint="@string/tag_hints"/>
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/rentSavedPhotos"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/uploaded_photos"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size"
                        android:clickable="true"
                        android:onClick="viewPhotos"/>

                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/rentAddPhotos"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/upload_photos"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size"
                        android:clickable="true"
                        android:onClick="uploadPhotos"/>

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/editButton"
                android:layout_width="@dimen/width_buttons"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/table"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/background_color"
                android:onClick="editRent"
                android:text="@string/edit_button"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="@dimen/width_buttons"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/editButton"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/background_color"
                android:onClick="saveRent"
                android:text="@string/save_button"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="@dimen/width_buttons"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/saveButton"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_color"
                android:layout_marginTop="@dimen/margin_top"
                android:onClick="deleteRent"
                android:text="@string/delete_button"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/returnButton"
                android:layout_width="@dimen/width_buttons"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/deleteButton"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_color"
                android:layout_marginTop="@dimen/margin_top"
                android:onClick="goBack"
                android:text="@string/goBack_button"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
